# Penguin

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  settings.json  tables.sql
.github/: dependabot.yml
.github/workflows/: lint.yml
assets/: facts.json
cogs/: animepics.py  blackjack.py  botinfo.py  casino.py  commandchart.py  economy.py  errorhandler.py  events.py  facts.py  fun.py  help.py  images.py  listeners.py  moderation.py  music.py  owner.py  pictures.py  polaroid.py  polaroid_manipulation.py  prefixes.py  reddit.py  socket.py  stonks.py  useful.py  utilites.py  utilities.py
exts/: botinfo.py  casino.py  economy.py  errorhandler.py  events.py  facts.py  fun.py  help.py  images.py  moderation.py  owner.py  pictures.py  polaroid_manipulation.py  prefixes.py  reddit.py  stonks.py  useful.py  utilities.py
utils/: __init__.py  argparse.py  argparser.py  argparsing.py  blackjack.py  bottom.py  casino.py  context.py  default.py  eco.py  fuzzy.py  help.py  logger.py  page.py  permissions.py  timer.py
