[tool.poetry]
name = "system32"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
humanize = "^3.2.0"
prettytable = "^2.0.0"
psutil = "^5.8.0"
timeago = "^1.0.15"
aiohttp = "^3.7.3"
asyncpg = "^0.22.0"
jishaku = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
